Update index.html, portfolio.html and styles.css

--- a/index.html
+++ b/index.html
@@ -61,12 +61,17 @@
         </div>
       </section>
 
-      <!-- section 2 -->
+      <!-- section 1 -->
       <section class="section">
         <div class="container">
           <h2 class="features-main-title" hidden>Features</h2>
           <ul class="list features-list">
             <li class="item">
+              <div class="icon-features-list">
+                <svg class="icon-features">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Strategy</h3>
               <p class="features-descr">
                 Our goal is to identify the business problem to walk away with
@@ -74,6 +79,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="icon-features-list">
+                <svg class="icon-features">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Punctuality</h3>
               <p class="features-descr">
                 Bring the key message to the brand's audience for the best price
@@ -81,6 +91,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="icon-features-list">
+                <svg class="icon-features">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Diligence</h3>
               <p class="features-descr">
                 Research and confirm brands that present the strongest digital
@@ -88,6 +103,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="icon-features-list">
+                <svg class="icon-features">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Technologies</h3>
               <p class="features-descr">
                 Design practice focused on digital experiences. We bring forth a
@@ -98,7 +118,7 @@
         </div>
       </section>
 
-      <!-- section 3 -->
+      <!-- section 2 -->
       <section class="wawd">
         <div class="container">
           <h2 class="wawd-title">What are we doing</h2>
@@ -131,7 +151,7 @@
         </div>
       </section>
 
-      <!-- section 4 -->
+      <!-- section 3 -->
       <section class="our-team section">
         <div class="container">
           <h2 class="our-team-title">Our Team</h2>
@@ -146,28 +166,42 @@
               <div class="our-team-card">
                 <h3 class="our-team-name">Mark Guerrero</h3>
                 <p class="our-team-work">Product Designer</p>
-                <!-- <ul class="list our-team-networks">
+                <ul class="list our-team-networks">
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-1.svg" alt="instagram"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-2.svg" alt="twiter"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-3.svg" alt="facebook"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-4.svg" alt="linkedin"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
-                </ul> -->
+                </ul>
               </div>
             </li>
 
@@ -181,28 +215,42 @@
               <div class="our-team-card">
                 <h3 class="our-team-name">Tom Ford</h3>
                 <p class="our-team-work">Frontend Developer</p>
-                <!-- <ul class="list our-team-networks">
+                <ul class="list our-team-networks">
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-1.svg" alt="instagram"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-2.svg" alt="twiter"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-3.svg" alt="facebook"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-4.svg" alt="linkedin"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
-                </ul> -->
+                </ul>
               </div>
             </li>
 
@@ -216,28 +264,42 @@
               <div class="our-team-card">
                 <h3 class="our-team-name">Camila Garcia</h3>
                 <p class="our-team-work">Marketing</p>
-                <!-- <ul class="list our-team-networks">
+                <ul class="list our-team-networks">
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-1.svg" alt="instagram"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-2.svg" alt="twiter"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-3.svg" alt="facebook"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-4.svg" alt="linkedin"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
-                </ul> -->
+                </ul>
               </div>
             </li>
 
@@ -251,29 +313,82 @@
               <div class="our-team-card">
                 <h3 class="our-team-name">Daniel Wilson</h3>
                 <p class="our-team-work">UI Designer</p>
-                <!-- <ul class="list our-team-networks">
+                <ul class="list our-team-networks">
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-1.svg" alt="instagram"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-2.svg" alt="twiter"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-3.svg" alt="facebook"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li>
-                    <a href=""
-                      ><img src="./images/networks-4.svg" alt="linkedin"
-                    /></a>
+                    <a class="our-team-networks-link" href="">
+                      <svg class="icon-our-team">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
-                </ul> -->
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Section 4 -->
+      <section class="section">
+        <div class="container">
+          <h2 class="customers-title">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-item">
+              <svg class="customer-icon">
+                <use href="./images/symbol-defs.svg#icon-logo-1"></use>
+              </svg>
+            </li>
+            <li class="customers-item">
+              <svg class="customer-icon">
+                <use href="./images/symbol-defs.svg#icon-logo-2"></use>
+              </svg>
+            </li>
+            <li class="customers-item">
+              <svg class="customer-icon">
+                <use href="./images/symbol-defs.svg#icon-logo-3"></use>
+              </svg>
+            </li>
+            <li class="customers-item">
+              <svg class="customer-icon">
+                <use href="./images/symbol-defs.svg#icon-logo-4"></use>
+              </svg>
+            </li>
+            <li class="customers-item">
+              <svg class="customer-icon">
+                <use href="./images/symbol-defs.svg#icon-logo-5"></use>
+              </svg>
+            </li>
+            <li class="customers-item">
+              <svg class="customer-icon">
+                <use href="./images/symbol-defs.svg#icon-logo-6"></use>
+              </svg>
             </li>
           </ul>
         </div>
@@ -282,14 +397,49 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="link logo" href="./index.html"
-          >Web<span class="logo-part-footer">Studio</span></a
-        >
-        <p class="footer-descr">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div>
+          <a class="link logo" href="./index.html"
+            >Web<span class="logo-part-footer">Studio</span></a
+          >
+          <p class="footer-descr">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-container">
+          <p class="social">Social media</p>
+          <ul class="list footer-networks">
+            <li class="footer-item">
+              <a class="footer-link" href="">
+                <svg class="icon-footer">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link" href="">
+                <svg class="icon-footer">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link" href="">
+                <svg class="icon-footer">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link" href="">
+                <svg class="icon-footer">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
