--- a/portfolio.html
+++ b/portfolio.html
@@ -216,14 +216,49 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="link logo" href="./index.html"
-          >Web<span class="logo-part-footer">Studio</span></a
-        >
-        <p class="footer-descr">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div>
+          <a class="link logo" href="./index.html"
+            >Web<span class="logo-part-footer">Studio</span></a
+          >
+          <p class="footer-descr">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-container">
+          <p class="social">Social media</p>
+          <ul class="list footer-networks">
+            <li class="footer-item">
+              <a class="footer-link" href="">
+                <svg class="icon-footer">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link" href="">
+                <svg class="icon-footer">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link" href="">
+                <svg class="icon-footer">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link" href="">
+                <svg class="icon-footer">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
