Update index.html and portfolio.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <ul class="list features-list">
             <li class="item">
               <div class="icon-features-list">
-                <svg class="icon-features">
+                <svg class="icon-features" aria-label="antenna">
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -80,7 +80,7 @@
             </li>
             <li class="item">
               <div class="icon-features-list">
-                <svg class="icon-features">
+                <svg class="icon-features" aria-label="clock">
                   <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -92,7 +92,7 @@
             </li>
             <li class="item">
               <div class="icon-features-list">
-                <svg class="icon-features">
+                <svg class="icon-features" aria-label="diagram">
                   <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -104,7 +104,7 @@
             </li>
             <li class="item">
               <div class="icon-features-list">
-                <svg class="icon-features">
+                <svg class="icon-features" aria-label="astronaut">
                   <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -169,7 +169,7 @@
                 <ul class="list our-team-networks">
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="instagram">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
@@ -178,14 +178,14 @@
                   </li>
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="twitter">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="facebook">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
                         ></use>
@@ -194,7 +194,7 @@
                   </li>
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="linkedin">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
                         ></use>
@@ -218,7 +218,7 @@
                 <ul class="list our-team-networks">
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="instagram">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
@@ -227,14 +227,14 @@
                   </li>
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="twitter">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="facebook">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
                         ></use>
@@ -243,7 +243,7 @@
                   </li>
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="linkedin">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
                         ></use>
@@ -267,7 +267,7 @@
                 <ul class="list our-team-networks">
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="instagram">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
@@ -276,14 +276,14 @@
                   </li>
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="twitter">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="facebook">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
                         ></use>
@@ -292,7 +292,7 @@
                   </li>
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="linkedin">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
                         ></use>
@@ -316,7 +316,7 @@
                 <ul class="list our-team-networks">
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="instagram">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
@@ -325,14 +325,14 @@
                   </li>
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="twitter">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="facebook">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
                         ></use>
@@ -341,7 +341,7 @@
                   </li>
                   <li>
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team">
+                      <svg class="icon-our-team" aria-label="linkedin">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
                         ></use>
@@ -361,32 +361,32 @@
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
-              <svg class="customer-icon">
+              <svg class="customer-icon" aria-label="Customers logo">
                 <use href="./images/symbol-defs.svg#icon-logo-1"></use>
               </svg>
             </li>
             <li class="customers-item">
-              <svg class="customer-icon">
+              <svg class="customer-icon" aria-label="Customers logo">
                 <use href="./images/symbol-defs.svg#icon-logo-2"></use>
               </svg>
             </li>
             <li class="customers-item">
-              <svg class="customer-icon">
+              <svg class="customer-icon" aria-label="Customers logo">
                 <use href="./images/symbol-defs.svg#icon-logo-3"></use>
               </svg>
             </li>
             <li class="customers-item">
-              <svg class="customer-icon">
+              <svg class="customer-icon" aria-label="Customers logo">
                 <use href="./images/symbol-defs.svg#icon-logo-4"></use>
               </svg>
             </li>
             <li class="customers-item">
-              <svg class="customer-icon">
+              <svg class="customer-icon" aria-label="Customers logo">
                 <use href="./images/symbol-defs.svg#icon-logo-5"></use>
               </svg>
             </li>
             <li class="customers-item">
-              <svg class="customer-icon">
+              <svg class="customer-icon" aria-label="Customers logo">
                 <use href="./images/symbol-defs.svg#icon-logo-6"></use>
               </svg>
             </li>
@@ -412,28 +412,28 @@
           <ul class="list footer-networks">
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer">
+                <svg class="icon-footer" aria-label="instagram">
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer">
+                <svg class="icon-footer" aria-label="twitter">
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer">
+                <svg class="icon-footer" aria-label="facebook">
                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer">
+                <svg class="icon-footer" aria-label="linkedin">
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
