--- a/portfolio.html
+++ b/portfolio.html
@@ -231,28 +231,28 @@
           <ul class="list footer-networks">
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer">
+                <svg class="icon-footer" aria-label="instagram">
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer">
+                <svg class="icon-footer" aria-label="twitter">
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer">
+                <svg class="icon-footer" aria-label="facebook">
                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer">
+                <svg class="icon-footer" aria-label="linkedin">
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
