Update index.html, portholio.html and styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,9 @@
           <ul class="list navigation">
             <li><a class="link menu-nav" href="./index.html">Studio</a></li>
             <li>
-              <a class="link menu-nav" href="./portfolio.html">Portfolio</a>
+              <a class="link menu-nav portfolio-line" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li><a class="link menu-nav" href="">Contacts</a></li>
           </ul>
@@ -77,12 +79,23 @@
           <ul class="list examples-list">
             <li class="examples-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/pex-1.jpg"
-                  alt="mobile app"
-                  width="360"
-                  height="300"
-                />
+                <div class="cover-item">
+                  <img
+                    src="./images/portfolio/pex-1.jpg"
+                    alt="mobile app"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="examples-cover-block">
+                    <p class="examples-cover-text">
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
+                      necessitatibus reiciendis impedit, cumque veniam fuga.
+                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
+                      ea tempore
+                    </p>
+                  </div>
+                </div>
                 <div class="card">
                   <h2 class="examles-title">Banking App Interface Concept</h2>
                   <p class="examples-descr">App</p>
@@ -92,12 +105,21 @@
 
             <li class="examples-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/pex-2.jpg"
-                  alt="phone with qr-code"
-                  width="360"
-                  height="300"
-                />
+                <div class="cover-item">
+                  <img
+                    src="./images/portfolio/pex-2.jpg"
+                    alt="phone with qr-code"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="examples-cover-block">
+                    <p class="examples-cover-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card">
                   <h2 class="examles-title">Cashless Payment</h2>
                   <p class="examples-descr">Marketing</p>
@@ -107,12 +129,23 @@
 
             <li class="examples-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/pex-3.jpg"
-                  alt="laptop and phone"
-                  width="360"
-                  height="300"
-                />
+                <div class="cover-item">
+                  <img
+                    src="./images/portfolio/pex-3.jpg"
+                    alt="laptop and phone"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="examples-cover-block">
+                    <p class="examples-cover-text">
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
+                      necessitatibus reiciendis impedit, cumque veniam fuga.
+                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
+                      ea tempore
+                    </p>
+                  </div>
+                </div>
                 <div class="card">
                   <h2 class="examles-title">Meditation App</h2>
                   <p class="examples-descr">App</p>
@@ -122,12 +155,23 @@
 
             <li class="examples-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/pex-4.jpg"
-                  alt="car inside"
-                  width="360"
-                  height="300"
-                />
+                <div class="cover-item">
+                  <img
+                    src="./images/portfolio/pex-4.jpg"
+                    alt="car inside"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="examples-cover-block">
+                    <p class="examples-cover-text">
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
+                      necessitatibus reiciendis impedit, cumque veniam fuga.
+                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
+                      ea tempore
+                    </p>
+                  </div>
+                </div>
                 <div class="card">
                   <h2 class="examles-title">Taxi Service</h2>
                   <p class="examples-descr">Marketing</p>
@@ -137,12 +181,23 @@
 
             <li class="examples-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/pex-5.jpg"
-                  alt="phone screen"
-                  width="360"
-                  height="300"
-                />
+                <div class="cover-item">
+                  <img
+                    src="./images/portfolio/pex-5.jpg"
+                    alt="phone screen"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="examples-cover-block">
+                    <p class="examples-cover-text">
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
+                      necessitatibus reiciendis impedit, cumque veniam fuga.
+                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
+                      ea tempore
+                    </p>
+                  </div>
+                </div>
                 <div class="card">
                   <h2 class="examles-title">Screen Illustrations</h2>
                   <p class="examples-descr">Design</p>
@@ -152,12 +207,23 @@
 
             <li class="examples-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/pex-6.jpg"
-                  alt="girl with phone"
-                  width="360"
-                  height="300"
-                />
+                <div class="cover-item">
+                  <img
+                    src="./images/portfolio/pex-6.jpg"
+                    alt="girl with phone"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="examples-cover-block">
+                    <p class="examples-cover-text">
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
+                      necessitatibus reiciendis impedit, cumque veniam fuga.
+                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
+                      ea tempore
+                    </p>
+                  </div>
+                </div>
                 <div class="card">
                   <h2 class="examles-title">Online Courses</h2>
                   <p class="examples-descr">Marketing</p>
@@ -167,12 +233,23 @@
 
             <li class="examples-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/pex-7.jpg"
-                  alt="instagram stories"
-                  width="360"
-                  height="300"
-                />
+                <div class="cover-item">
+                  <img
+                    src="./images/portfolio/pex-7.jpg"
+                    alt="instagram stories"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="examples-cover-block">
+                    <p class="examples-cover-text">
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
+                      necessitatibus reiciendis impedit, cumque veniam fuga.
+                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
+                      ea tempore
+                    </p>
+                  </div>
+                </div>
                 <div class="card">
                   <h2 class="examles-title">Instagram Stories Concept</h2>
                   <p class="examples-descr">Design</p>
@@ -182,12 +259,23 @@
 
             <li class="examples-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/pex-8.jpg"
-                  alt="food"
-                  width="360"
-                  height="300"
-                />
+                <div class="cover-item">
+                  <img
+                    src="./images/portfolio/pex-8.jpg"
+                    alt="food"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="examples-cover-block">
+                    <p class="examples-cover-text">
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
+                      necessitatibus reiciendis impedit, cumque veniam fuga.
+                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
+                      ea tempore
+                    </p>
+                  </div>
+                </div>
                 <div class="card">
                   <h2 class="examles-title">Organic Food</h2>
                   <p class="examples-descr">Web Site</p>
@@ -197,12 +285,23 @@
 
             <li class="examples-item">
               <a class="link" href="">
-                <img
-                  src="./images/portfolio/pex-9.jpg"
-                  alt="cup of coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="cover-item">
+                  <img
+                    src="./images/portfolio/pex-9.jpg"
+                    alt="cup of coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="examples-cover-block">
+                    <p class="examples-cover-text">
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
+                      necessitatibus reiciendis impedit, cumque veniam fuga.
+                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
+                      ea tempore
+                    </p>
+                  </div>
+                </div>
                 <div class="card">
                   <h2 class="examles-title">Fresh Coffee</h2>
                   <p class="examples-descr">Web Site</p>
