--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./js/modal.js" />
   </head>
 
   <body>
@@ -27,7 +28,11 @@
             >Web<span class="logo-part">Studio</span></a
           >
           <ul class="list navigation">
-            <li><a class="link menu-nav" href="./index.html">Studio</a></li>
+            <li>
+              <a class="link menu-nav studio-line" href="./index.html"
+                >Studio</a
+              >
+            </li>
             <li>
               <a class="link menu-nav" href="./portfolio.html">Portfolio</a>
             </li>
@@ -57,7 +62,9 @@
       <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="button" type="button">Order Service</button>
+          <button class="button" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -360,35 +367,47 @@
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list list">
-            <li class="customers-item">
-              <svg class="customer-icon" aria-label="Customers logo">
-                <use href="./images/symbol-defs.svg#icon-logo-1"></use>
-              </svg>
+            <li>
+              <a class="customers-link" href="">
+                <svg class="customer-icon" aria-label="Customers logo">
+                  <use href="./images/symbol-defs.svg#icon-logo-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customers-item">
-              <svg class="customer-icon" aria-label="Customers logo">
-                <use href="./images/symbol-defs.svg#icon-logo-2"></use>
-              </svg>
+            <li>
+              <a class="customers-link" href="">
+                <svg class="customer-icon" aria-label="Customers logo">
+                  <use href="./images/symbol-defs.svg#icon-logo-2"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customers-item">
-              <svg class="customer-icon" aria-label="Customers logo">
-                <use href="./images/symbol-defs.svg#icon-logo-3"></use>
-              </svg>
+            <li>
+              <a class="customers-link" href="">
+                <svg class="customer-icon" aria-label="Customers logo">
+                  <use href="./images/symbol-defs.svg#icon-logo-3"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customers-item">
-              <svg class="customer-icon" aria-label="Customers logo">
-                <use href="./images/symbol-defs.svg#icon-logo-4"></use>
-              </svg>
+            <li>
+              <a class="customers-link" href="">
+                <svg class="customer-icon" aria-label="Customers logo">
+                  <use href="./images/symbol-defs.svg#icon-logo-4"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customers-item">
-              <svg class="customer-icon" aria-label="Customers logo">
-                <use href="./images/symbol-defs.svg#icon-logo-5"></use>
-              </svg>
+            <li>
+              <a class="customers-link" href="">
+                <svg class="customer-icon" aria-label="Customers logo">
+                  <use href="./images/symbol-defs.svg#icon-logo-5"></use>
+                </svg>
+              </a>
             </li>
-            <li class="customers-item">
-              <svg class="customer-icon" aria-label="Customers logo">
-                <use href="./images/symbol-defs.svg#icon-logo-6"></use>
-              </svg>
+            <li>
+              <a class="customers-link" href="">
+                <svg class="customer-icon" aria-label="Customers logo">
+                  <use href="./images/symbol-defs.svg#icon-logo-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -442,5 +461,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="close-button" data-modal-close>
+          <svg class="closing-modal">
+            <use href="./images/symbol-defs.svg#icon-closeblack"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
